Fixed image with opacity and rating stars position on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -341,7 +341,7 @@ button,
 
 .box-content {
   font: 18px serif;
-  height: 90%;
+  height: 80%;
   overflow: hidden auto;
   user-select: none;
   font-family: sans-serif;
